# msa-automation-5

./: README.md  pyproject.toml
inventory/: groups.yaml  hosts.yaml
msa_automation_5/: __init__.py  function.py  napalm_example.py  netmiko_example.py  nornir_example.py  scrapli_example.py
test/: test_inc.py
